# prova1_laboratorio2

./: CMakeLists.txt  README.md  funzioni.cpp  main.cpp  metod.hpp  prima_prova
